# sup

./: .gitignore  BUILD.md  CLI_USAGE.md  CMakeLists.txt  CODEGEN_IMPLEMENTATION.md  INSTALL_COMPILER.md  LICENSE  QUICKSTART.md  README.md  SUMMARY.md  TELEGRAM_BOT_EXPLANATION.md  UPDATES_SUMMARY.md  VSCODE_EXTENSION.md  build_simple.bat  concept.md  sup-language-0.1.0.vsix
examples/: README.md  README_TELEGRAM_BOT.md  calculator.sup  hello.sup  library_test.sup  math.sup  telegram_bot.sup  telegram_bot_advanced.sup  telegram_bot_simple.sup
include/: AST.h  CodeGenerator.h  Lexer.h  Parser.h  SemanticAnalyzer.h  Token.h
lib/: README.md  array.sup  math.sup  string.sup
vscode-extension/: .vscodeignore  CHANGELOG.md  EXTENSION_SUMMARY.md  INSTALL.md  INSTALL_VSIX.md  QUICKSTART.md  README.md  create_icon.py  language-configuration.json  package.json  test-sample.sup
vscode-extension/fileicons/: sup-icon-theme.json
vscode-extension/syntaxes/: sup.tmLanguage.json
